--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,38 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: "Welcome to the BetterFloat documentation"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+<img src="/images/hero.png" alt="Hero Dark" />
 
-## Setting up
+## Configuring the extension
 
-The first step to world-class documentation is setting up your editing environments.
+Make the best out of the extension by configuring it to your needs. It's developed with an emphasis on customization and ease of use.
 
 <CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
+	<Card title="Quickstart" icon="cloud-arrow-down" href="/quickstart">
+		Setting up the extension in your favorite browser
+	</Card>
+	<Card title="Customizing Settings" icon="palette" href="https://mintlify.com/docs/settings/global">
+		Customize the extension according to your preferences
+	</Card>
 </CardGroup>
 
-## Make it yours
+## The BetterFloat ecosystem
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Can't get enough of BetterFloat? Check out the rest of our ecosystem.
 
 <CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
+	<Card title="More Extensions" icon="stars" href="https://mintlify.com/customers">
+		Check out our showcase of our favorite documentation
+	</Card>
+	<Card title="Contributing" icon="screwdriver-wrench" href="https://mintlify.com/docs/components/accordion">
+		Help us improve the extension by contributing to our open-source project
+	</Card>
+	<Card title="Public APIs" icon="code" href="/api-reference/introduction">
+		Building your own project? Get a head start with our public APIs
+	</Card>
+	<Card title="Support" icon="message-question" href="https://discord.gg/VQWXp33nSW">
+		Need help? Join our Discord server to get in touch with us
+	</Card>
 </CardGroup>
