--- a/customization/pricing.mdx
+++ b/customization/pricing.mdx
@@ -4,7 +4,7 @@ description: "Source markets and reference prices"
 icon: "circle-dollar"
 ---
 
-## Source Markets
+## <Icon icon="shop" /> Source Markets
 
 <Note>
 
@@ -47,3 +47,27 @@ If enabled, the extension shows an additional indicator for the price percentage
 <Frame caption="Example: A listing priced at 65% of the Steam price">
 	<img src="/images/screenshots/supplement-with-steam.png" alt="Supplement with Steam" />
 </Frame>
+
+## <Icon icon="steam" /> Link to Steam Market Page
+
+<Info>Only available for CSFloat.</Info>
+
+If enabled, the extension adds a link to the Steam market page for each item. This can be useful for people who like to use the Steam market for the price history or reselling.
+
+<Frame caption="Example: Clickable Steam symbol (link) on a Dragon Lore">
+	<img src="/images/screenshots/steam-link.png" alt="Steam Link" />
+</Frame>
+
+## <Icon icon="tags" /> Price Difference
+
+Recalculates and replaces the original discount tag according to the item's market price. This includes two independent options:
+
+-   **Show Price Difference**: Shows the difference in absolute units.
+-   **Show Price Difference Percentage**: Shows the difference in percentage.
+
+<ins>Example:</ins>
+An item is listed for \$100 and the reference price is \$80.
+
+-   If both options are enabled, the tag will show: `-$20 (-20%)`
+-   If only the first option is enabled, the tag will show: `-$20`
+-   If only the second option is enabled, the tag will show: `-20%`
