General Features and Troubleshooting

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Introduction
 description: "Welcome to the BetterFloat documentation"
+icon: "play"
 ---
 
 <img src="/images/hero.png" alt="Hero Dark" />
@@ -23,10 +24,10 @@ Make the best out of the extension by configuring it to your needs. It's develop
 Can't get enough of BetterFloat? Check out the rest of our ecosystem.
 
 <CardGroup cols={2}>
-	<Card title="More Extensions" icon="stars" href="https://mintlify.com/customers">
+	<Card title="More Extensions" icon="stars" href="">
 		Check out our showcase of our favorite documentation
 	</Card>
-	<Card title="Contributing" icon="screwdriver-wrench" href="https://mintlify.com/docs/components/accordion">
+	<Card title="Contributing" icon="screwdriver-wrench" href="https://github.com/GODrums/BetterFloat">
 		Help us improve the extension by contributing to our open-source project
 	</Card>
 	<Card title="Public APIs" icon="code" href="/api-reference/introduction">
