--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quickstart"
 description: "Get started with the BetterFloat extension"
+icon: "rocket"
 ---
 
 ## Install the extension
@@ -21,10 +22,16 @@ The extension is available for all major browsers. Click on the images below to 
 
 <a href="https://chromewebstore.google.com/detail/betterfloat/bphfhlfhnohppnleaehnlfigkkccpglk" target="_blank">
 	<img noZoom width="350" src="/images/get-chrome.png" alt="Chrome Web Store" />
+	https://chromewebstore.google.com/detail/betterfloat/bphfhlfhnohppnleaehnlfigkkccpglk
 </a>
 
 ### Firefox
 
 <a href="https://addons.mozilla.org/en-US/firefox/addon/betterfloat/" target="_blank">
 	<img noZoom width="250" src="/images/get-firefox.png" alt="Firefox Add-ons" />
+	https://addons.mozilla.org/en-US/firefox/addon/betterfloat/
 </a>
+
+<Warning>
+	There are known issues with extensions on Firefox. Please head over to the [Readme](https://github.com/GODrums/BetterFloat#troubleshooting-on-mozilla-firefox) if you encounter any issues.
+</Warning>
