fix: customization link

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,7 +14,7 @@ Make the best out of the extension by configuring it to your needs. It's develop
 	<Card title="Quickstart" icon="cloud-arrow-down" href="/quickstart">
 		Setting up the extension in your favorite browser
 	</Card>
-	<Card title="Customizing Settings" icon="palette" href="https://mintlify.com/docs/settings/global">
+	<Card title="Customizing Settings" icon="palette" href="/customization/general">
 		Customize the extension according to your preferences
 	</Card>
 </CardGroup>
