Add first tutorial

--- a/customization/general.mdx
+++ b/customization/general.mdx
@@ -6,13 +6,14 @@ icon: "book"
 
 ## <Icon icon="arrows-rotate" /> Auto-Refresh
 
-<Info>Only available for CSFloat.</Info>
-<Tip>Please use this feature responsibly. Refreshing more than once every 30s **WILL** get you banned.</Tip>
+<Info>Available for CSFloat. Also available for DMarket & Lisskins on the pro plan.</Info>
+<Tip>Please use this feature responsibly. Refreshing more than once every 30s **CAN** get you banned over longer periods of time.</Tip>
 
 This feature is specific to the "NEWEST"-sorting on CSFloat. It automatically refreshes the page in a certain interval to show the newest listings. This can be useful to quickly identify new listings and potentially good deals.
 
 You can select between the following intervals:
 
+-   20 seconds (PRO plan only)
 -   30 seconds
 -   1 minute
 -   2 minutes
