Clarify notification settings

--- a/tutorials/activate-notifications.mdx
+++ b/tutorials/activate-notifications.mdx
@@ -17,9 +17,9 @@ Navigate to the Skinport LIVE-page or the CSFloat website. Activate the LIVE-mod
 
 Adjust the notification settings to your liking. You can choose between the following options:
 
-- name: The name of the item. Can be any part of the full item name. E.g. "Karambit", "Case Hardened" or "Karambit | Case Hardened"
+- name: Optional, can be left empty. The name of the item. Can be any part of the full item name. E.g. "Karambit", "Case Hardened" or "Karambit | Case Hardened"
 - float: Adjust the slider according to the float of the items. Using anything other than 0-1 means only skins with floats will be included.
-- maximum market %: The maximum market percentage you want to be notified about. E.g. 90 means you will only be notified about items that at maximum 90% Buff / Steam / UU market price. The chosen provider can be selected is the same as the one you have selected in the extension settings.
+- maximum market %: The maximum market percentage you want to be notified about. E.g. 90 means you will only be notified about items that at maximum 90% Buff / Steam / UU market price. The chosen provider equals the one selected in the extension settings.
 
 <Warning>Make sure to save your settings by clicking on the `Save`-button.</Warning>
 
