--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -4,6 +4,45 @@ description: "Stay up to date with the latest changes to BetterFloat"
 icon: "file-check"
 ---
 
+<Update label="v3.1.8" description="2025-03-07">
+    ### New Features
+    - Added blue gem integrations to DMarket and Bitskins
+    - Added item enhancements to the Bitskins preview items list
+
+    ### Improvements
+    - Minor performance improvements on CSFloat
+    - Fixes a bug which caused items not to get detected when being redirected from a legacy link to CSFloat
+    - Massively improved the stability on Skinbid
+
+</Update>
+<Update label="v3.1.4" description="2025-03-02">
+    ### New Features
+    - Market Comparison on Skinport item pages
+    - Currency conversion for Market Comparison on CSFloat
+
+    ### Improvements
+    - Major performance improvements to the Market Comparison on CSFloat
+    - Various minor bug fixes to the Market Comparison on CSFloat
+
+</Update>
+<Update label="v3.1.0" description="2025-02-22">
+    ### New Features
+    - Market Comparison on CSFloat item pages
+</Update>
+<Update label="v3.0.0" description="2025-01-19">
+    ### Introducing the Pro-Version of BetterFloat!
+    
+    **Why should you buy the pro-plan?**
+    - Full access to 9+ markets (exclusive: CSMoney, BuffMarket, DMarket, Bitskins, Lisskins, Skinbaron)
+    - More accurate prices with lower refresh rate and less dependency on Pricempire
+    - Exclusive Instant Notifications for New Listings on Skinport + CSFloat
+    - Exclusive critical sniping features: auto-refresh features for DMarket + Lisskins, 20s refresh timings on CSFloat and filter after Buff% on Skinport
+    - Early access to new features
+
+    **Remark:**
+    Not interested in Pro? No worries, all previous features will remain completely free to use forever.
+
+</Update>
 <Update label="v2.8.6" description="2024-11-12">
     ### New Features
     - Added selling age to sold items on CSFloat
@@ -15,6 +54,7 @@ icon: "file-check"
 
     ### Improvements
     - Reduced network traffic for prices
+
 </Update>
 <Update label="v2.7.9" description="2024-10-10">
     ### New Features
@@ -37,6 +77,7 @@ icon: "file-check"
 
     ### Bug Fixes
     - Fixed a case where custom currencies lead to issues with the item detection (@dennis please let me know if this fixes your issue!)
+
 </Update>
 <Update label="v2.7.0" description="2024-07-16">
     ### New Features
@@ -49,6 +90,7 @@ icon: "file-check"
     - Fixed cases where the bargain calculator did not show
     - Fixed a case where data points in the "offers"-tab were assigned to the wrong offer
     - Fixed a case where in-game screenshots for the wrong item were displayed (thanks for reporting @jason!)
+
 </Update>
 <Update label="v2.5.10" description="2024-06-18">
     ## OCO Removal
