--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -4,6 +4,30 @@ description: "Stay up to date with the latest changes to BetterFloat"
 icon: "file-check"
 ---
 
+<Update label="v3.2.0" description="2025-06-26">
+    ### New Markets (Pro exclusive, BETA)
+    - Added support for the following markets:
+        - Gamerpay
+        - WhiteMarket
+        - Waxpeer
+        - SkinsMonkey
+        - MarketCSGO
+        - Shadowpay
+        - SwapGG
+        - Tradeit
+        - AvanMarket
+        - Skinout
+
+    ### Omnibox
+    - Added a new way to search for items
+    - Search with the format `bf <market> <item>` in your browser's URL bar for items on a specific market
+
+    ### Improvements
+    - All market comparisons got much faster loading times
+    - Massively reduced the package size of the extension
+
+</Update>
+
 <Update label="v3.1.8" description="2025-03-07">
     ### New Features
     - Added blue gem integrations to DMarket and Bitskins
