add omnibox link to changelog

--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -21,6 +21,7 @@ icon: "file-check"
     ### Omnibox
     - Added a new way to search for items
     - Search with the format `bf <market> <item>` in your browser's URL bar for items on a specific market
+    - Watch our tutorial video [here](/tutorials/using-omnibox)
 
     ### Improvements
     - All market comparisons got much faster loading times
